# sports_bot

./: .gitignore  CMakeLists.txt  README.md  base_bridge.py  context.md  debug_tracker.py  go_to_ready.py  notes.txt  picklebot.xml
mmp_panda/: CMakeLists.txt  README.md  controller.cpp  launch_ball.py  simviz.cpp  world_mmp_panda.urdf
my_project/: CMakeLists.txt  controller.cpp  redis_keys.h  simviz.cpp  world_my_project.urdf
optitrack/: StreamDataSkeleton.py  world_calibration.json
optitrack/drivers/PythonClient/: NatNetClient.py  StreamDataSkeleton.py  robot_tracker.py
panda/: controller.cpp
pickleball/: CMakeLists.txt  README.md  controller.cpp  launch_ball.py  redis_keys.h  run.sh  simviz.cpp  world_mmp_panda.urdf
pickleball/urdf/mmp_panda/: mmp_panda_measured.urdf
scripts/: build_presentation.py  calibrate_robot_marker.py  compare_trackers_volley.py  record_sim_demo.sh  record_throws.sh  send_base_goal.py  watch_ball.sh
state_machine/: README.md  __init__.py  ball_tracker.py  ball_tracker_test.py  config.py  ekf_ball_tracker.py  pickleball_fsm.py  redis_keys.py  swing_planner.py
utils/: frames.py
